# FastTemp

./: .gitignore  .ruff.toml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
fasttemp/: __init__.py  exceptions.py  fasttemp.py
